--- a/Modal Windows/css/styles.css
+++ b/Modal Windows/css/styles.css
@@ -69,3 +69,45 @@ nav {
   border: none;
   padding: 0.6rem 1.8rem;
 }
+
+.modal {
+  position: absolute;
+  color: black;
+  top: 50%;
+  left: 50%;
+  width: 40%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 2rem;
+  z-index: 10;
+  border-radius: 5px;
+}
+.modal h3 {
+  margin-top: 0.6rem;
+  text-align: center;
+}
+
+.close-modal {
+  cursor: pointer;
+  position: absolute;
+  top: 3%;
+  left: 92%;
+  color: black;
+  background-color: transparent;
+  border: none;
+  font-size: 2rem;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  background-color: #333;
+}
+
+.hidden {
+  display: none;
+}
