--- a/Modal Windows/css/styles.css
+++ b/Modal Windows/css/styles.css
@@ -69,6 +69,10 @@ nav {
   border: none;
   padding: 0.6rem 1.8rem;
 }
+.btn:hover {
+  background-color: #333;
+  color: #eee;
+}
 
 .modal {
   position: absolute;
@@ -82,6 +86,7 @@ nav {
   z-index: 10;
   border-radius: 5px;
 }
+
 .modal h3 {
   margin-top: 0.6rem;
   text-align: center;
