--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ header {
     height: 100%;
     top: 0;
     left: 0;
-    background: url("../images/Earth_Canyon.jpeg") no-repeat center center/cover;
+    background: url("../images/nature.jpg") no-repeat center center/cover;
     opacity: 0.2; }
 
 .navbar {
@@ -52,11 +52,24 @@ header {
         color: #fff; }
 
 .intro {
-  text-align: center;
-  font-size: 2.5rem; }
-  .intro_content {
+  text-align: center; }
+  .intro__content {
     padding-top: 30%;
-    z-index: 10; }
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+    .intro__content .title {
+      font-size: 2.5rem; }
+  .intro .social-links {
+    display: flex;
+    justify-content: center;
+    font-size: 2rem; }
+    .intro .social-links li {
+      margin-right: 2rem;
+      margin-top: 1rem; }
+      .intro .social-links li a {
+        color: #fff; }
 
 .footer {
   margin: auto; }
